small refctoring + reference
