# docs/src/swagger/schema.yaml
@@ -77,3 +77,17 @@ paths:
       responses:
         200:
           description: Успешный ответ
+
+  /subscribe:
+    post:
+      tags: [ 'Подписка' ]
+      description: Подписка на почтовые уведомления
+      parameters:
+        - name: email
+          description: E-mail
+          required: true
+          in: query
+          type: string
+      responses:
+        200:
+          description: Успешный ответ
